@@ -1,11 +1,19 @@
 # Copyright 1999-2019 Gentoo Authors
 # Distributed under the terms of the GNU General Public License v2
 
+# NOTE:
+# This kernel won't work in cases where you must create a
+# custom one (for example with RAID and your personal mdadm.conf)
+# For now, only 4.19 lts will be maintained. At some point it
+# will be switched to 5.4 lts
+#
+# If you notice that some modules are missing, please open a bug.
+
 EAPI=7
 
 inherit mount-boot
 
-DESCRIPTION="A 'genkernel all' kernel image compiled on gentoo-sources"
+DESCRIPTION="A gentoo-sources generic kernel image"
 HOMEPAGE="https://www.gentoo.org"
 SRC_URI="https://dev.gentoo.org/~ago/distfiles/${PN}/${P}.tar.xz"
 
